calibre.el NEWS -*- outline -*-

Copyright (C) 2023,2024 Free Software Foundation, Inc.
See the end of the file for license conditions.

This file is about changes in calibre.el, the Emacs client for
Calibre.

* Changes in calibre.el 1.5.0
** Add ability to mark books
It is now possible to mark books in the Library buffer.


* Changes in calibre.el 1.4.1
** Fix sorting by series
Sorting by series did not sort series names correctly.


* Changes in calibre.el 1.4.0
** Enable fuzzy searching
The search interface now supports 'fuzzy' searching, which matches any
book whose value for the search field contains the search term as a
substring.

** Allow opening books in external programs
The new calibre-library-open-book-external command allows opening
books using an external program.

The new calibre-external-programs user option allows specifying
external programs to use for specific formats instead of opening the
file in Emacs.


* Changes in calibre.el 1.3.4
** Allow searching by title in composite filters
The filter composition interface lacked the ability to filter by
title.

** Fix a timestamp parsing bug on Windows
Some timestamps signalled errors when parsed on Windows.


* Changes in calibre.el 1.3.3

** Fix series widget in metadata editing
The series widget was erroneously defined twice, causing the editing
buffer to display an error.

** Correctly handle multiple authors in when the CLI interface is used
When using the CLI interface to get book data calibre.el used the
wrong separator to identify different authors.

** Add missing function to the CLI interface
The CLI interface lacked the ability to search by title.


* Changes in calibre.el 1.3.2

** Add a manual
This release includes a texinfo manual.


* Changes in calibre.el 1.3.1

** Allow title filters in virtual libraries
The customization interface for calibre-virtual-libraries lacked the
ability to filter by title.

** Return no books when no books match inclusive filters